<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_toggle_wifi"
        android:icon="@drawable/ic_action_toggle_wifi"
        android:orderInCategory="10"
        android:title="@string/action_toggle_wifi"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_clear_log"
        android:icon="@drawable/ic_action_clear_log"
        android:orderInCategory="20"
        android:title="@string/action_clear_log"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save_log"
        android:icon="@drawable/ic_action_save_log"
        android:orderInCategory="30"
        android:title="@string/action_save_log"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
