<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="esnetlab.apps.android.wifidirect.efficientmultigroups.SettingsActivity$ProtocolTimingPreferenceFragment"
        android:icon="@drawable/ic_prtocol_timing_black_24dp"
        android:title="@string/pref_header_protocol_timing" />

    <header
        android:fragment="esnetlab.apps.android.wifidirect.efficientmultigroups.SettingsActivity$RankingParametersPreferenceFragment"
        android:icon="@drawable/ic_ranking_parameters_black_24dp"
        android:title="@string/pref_header_ranking_parameters" />

    <header
        android:fragment="esnetlab.apps.android.wifidirect.efficientmultigroups.SettingsActivity$PortsPreferenceFragment"
        android:icon="@drawable/ic_ports_black_24dp"
        android:title="@string/pref_header_ports" />

    <header
        android:fragment="esnetlab.apps.android.wifidirect.efficientmultigroups.SettingsActivity$TestingParametersPreferenceFragment"
        android:icon="@drawable/ic_testing_parameters_black_24dp"
        android:title="@string/pref_header_testing_parameters" />

</preference-headers>
